# Seminar

./: .gitignore  manim.cfg  plan.md  pyproject.toml  resume  test.py
data/: mvmc.py  time4.mvmc  time6.mvmc  time_file
data/timerun/: params2  params4  params6
slides/: BasicExample.json  Presentation.json  Projecteurs.json
src/: ansatz.py  encodage.py  energy_minimisation.py  presentation.py  scene1.py
